--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ html, body { width: 100%; height: 100% }
   height: 100%;
   position: absolute;
 }
+
+.filter{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  mix-blend-mode: multiply;
+  opacity: 1;
+}
