--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html, body { width: 100%; height: 100% }
   opacity: 1;
 }
 
-.red{
-  background-color: red ;
+.yellow{
+  background-color: #EBB91E ;
 }
 
 .blue{
