change blue to grey filter

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ html, body { width: 100%; height: 100% }
   background-color: #EBB91E ;
 }
 
-.blue{
-  background-color: blue ;
+.grey{
+  background-color: #414150 ;
 }
 
 .orange{
