--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ h1 {
 }
 
 img {
-  height: 100%;
+  height: 100vh;
   position: absolute;
 }
 
 .filter{
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   position: absolute;
   mix-blend-mode: multiply;
   opacity: 1;
