--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ img {
 }
 
 .filterimg{
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   position: absolute;
   mix-blend-mode: multiply;
   opacity: 1;
