--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ html, body { width: 100%; height: 100% }
 
 h1 {
   text-align: center;
+  font-family: 'Playfair Display', serif;
 }
+
 
 .videoPlayer{
   width: 100%;
@@ -16,7 +18,7 @@ img {
 }
 
 .filterimg{
-  width: 100vh;
+  width: 130vh;
   height: 100vh;
   position: absolute;
   mix-blend-mode: multiply;
