--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-html, body { width: 100%; height: 100% }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
 
 h1 {
   text-align: center;
   font-family: 'Playfair Display', serif;
 }
-
 
 .videoPlayer{
   width: 100%;
@@ -18,7 +21,8 @@ img {
 }
 
 .filterimg{
-  background-size: cover;
+  width: 100%;
+  height: 100%;
   position: absolute;
   mix-blend-mode: multiply;
   opacity: 1;
