--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ html, body {
 h1 {
   text-align: center;
   font-family: 'Playfair Display', serif;
+  margin: 0 0 0 0;
+  font-size: 4vh;
 }
 
 .videoPlayer{
@@ -15,7 +17,18 @@ h1 {
   position: absolute;
 }
 
-img {
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10 10 10 10;
+}
+
+.logo {
+  height: 7%;
+}
+
+.holidaycard {
   width: 100%;
   position: absolute;
 }
